[package]
name = "autopi-ser"
version = "0.1.0"
authors = ["sandorstormen <sandor.berglund@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]


[dependencies.serialport]
version="3.3.0"
default-features = false